--- a/lorem-ipsum.html
+++ b/lorem-ipsum.html
@@ -6,15 +6,13 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
-    <header class="invert-color">
-      <div class="content">
-        <h1 class="title">Lorem Ipsum</h1>
-        <hr class="title" />
-        <h2 class="subtitle">désign en noir et crème</h2>
-      </div>
+    <header>
+      <h1 class="title">Lorem Ipsum</h1>
+      <hr class="title" />
+      <h2 class="subtitle">désign en noir et crème</h2>
     </header>
-    <div class="fill">
-      <div class="content body-copy">
+    <div class="main-content">
+      <div class="body-copy">
         <h2 class="section">Adipiscing Elit</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -28,10 +26,8 @@
 
       </div>
     </div>
-    <footer class="invert-color">
-      <div class="content">
-        Copyright © 2019 Stuart Olsen
-      </div>
+    <footer>
+      Copyright © 2019 Stuart Olsen
     </footer>
   </body>
 </html>
