--- a/lorem-ipsum.html
+++ b/lorem-ipsum.html
@@ -38,7 +38,86 @@
           quis, laoreet et, pretium ac, nisi. Aenean magna nisl, mollis quis,
           molestie eu, feugiat in, orci. In hac habitasse platea dictumst.</p>
 
-        <h2 class="section">Li Europan Lingues</h2>
+        <h2 class="section">C Programs</h2>
+
+        <p>Code is often rendered on web pages in floating blocks. These blocks
+          sometimes have a small header identifying the listing; other times,
+          this is omitted. The code will often be displayed with syntax
+          highlighting and/or special font styles and weights for elements like
+          keywords. However, this is usually done with client-side Javascript or
+          server-side rendering as it is not practical to embed this styling by
+          hand. Consider the following simple C program:</p>
+
+        <div class="code">
+          <div class="code-header">Fibonacci example (<span class="code">fib.c</span>)</div>
+          <div class="code-body">
+            <pre>#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
+
+int main(int argc, char** argv) {
+  int a = 1, b = 1;
+  for (int i = 0; i < 10; ++i) {
+    printf("%d ", a);
+    b = b + a;
+    a = b - a;
+  }
+  printf("\n");
+  return EXIT_SUCCESS;
+}</pre>
+         </div>
+        </div>
+
+        <p>When run, this program prints the first ten Fibonacci numbers:</p>
+
+        <div class="code">
+          <div class="code-body">
+            <pre>$ cc fib.c
+$ ./a.out
+1 1 2 3 5 8 13 21 34 55</pre>
+         </div>
+        </div>
+
+        <p>When compiled for 64-bit x86 with optimizations turned on, GCC
+          produces something like the following:</p>
+
+        <div class="code">
+          <div class="code-header"><span class="code">a.out</span> (partial disassembly)</div>
+          <div class="code-body">
+            <pre>0000000000001060 &lt;main&gt;:
+    1060:       41 55                   push   %r13
+    1062:       4c 8d 2d 9b 0f 00 00    lea    0xf9b(%rip),%r13        # 2004 &lt;_IO_stdin_used+0x4&gt;
+    1069:       41 54                   push   %r12
+    106b:       41 bc 0a 00 00 00       mov    $0xa,%r12d
+    1071:       55                      push   %rbp
+    1072:       bd 01 00 00 00          mov    $0x1,%ebp
+    1077:       53                      push   %rbx
+    1078:       bb 01 00 00 00          mov    $0x1,%ebx
+    107d:       48 83 ec 08             sub    $0x8,%rsp
+    1081:       0f 1f 80 00 00 00 00    nopl   0x0(%rax)
+    1088:       89 de                   mov    %ebx,%esi
+    108a:       4c 89 ef                mov    %r13,%rdi
+    108d:       31 c0                   xor    %eax,%eax
+    108f:       e8 ac ff ff ff          callq  1040 &lt;printf@plt&gt;
+    1094:       8d 04 2b                lea    (%rbx,%rbp,1),%eax
+    1097:       89 eb                   mov    %ebp,%ebx
+    1099:       89 c5                   mov    %eax,%ebp
+    109b:       41 83 ec 01             sub    $0x1,%r12d
+    109f:       75 e7                   jne    1088 &lt;main+0x28&gt;
+    10a1:       bf 0a 00 00 00          mov    $0xa,%edi
+    10a6:       e8 85 ff ff ff          callq  1030 &lt;putchar@plt&gt;
+    10ab:       48 83 c4 08             add    $0x8,%rsp
+    10af:       31 c0                   xor    %eax,%eax
+    10b1:       5b                      pop    %rbx
+    10b2:       5d                      pop    %rbp
+    10b3:       41 5c                   pop    %r12
+    10b5:       41 5d                   pop    %r13
+    10b7:       c3                      retq
+    10b8:       0f 1f 84 00 00 00 00    nopl   0x0(%rax,%rax,1)
+    10bf:       00</pre>
+         </div>
+        </div>
+
+       <h2 class="section">Li Europan Lingues</h2>
 
         <p>Li Europan lingues es membres del sam familie. Lor separat existentie
           es un myth. Por scientie, musica, sport etc, litot Europa usa li sam
