--- a/lorem-ipsum.html
+++ b/lorem-ipsum.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Lorem Ipsum</title>
@@ -56,7 +56,7 @@
 
 int main(int argc, char** argv) {
   int a = 1, b = 1;
-  for (int i = 0; i < 10; ++i) {
+  for (int i = 0; i &lt; 10; ++i) {
     printf("%d ", a);
     b = b + a;
     a = b - a;
