about.html: title

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Lorem Ipsum</title>
+    <title>Stuart Olsen</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
