Fix header styling mistakes

--- a/example/lorem-ipsum.html
+++ b/example/lorem-ipsum.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Lorem Ipsum</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="../compiler/backend/swiss/style.css" type="text/css" />
   </head>
   <body>
     <header>
       <div class="hcenter">
         <h1 class="title">Lorem Ipsum</h1>
-        <hr class="title" />
+        <hr class="title-rule" />
         <h2 class="subtitle">désign en noir et crème</h2>
       </div>
     </header>
